# forge-encode

./: MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py  test_encoder_fix.py
forge_encode/: __init__.py  _version.py
forge_encode/encoders/: README_encoding.md  __init__.py  encode_smiles.py  example_usage.py  test_new_format.py  test_parameter_inference.py
forge_encode/encoders/hgraph/: __init__.py  chemutils.py  dataset.py  decoder.py  encoder.py  hgnn.py  inc_graph.py  mol_graph.py  nnutils.py  rnn.py  vocab.py
forge_encode/encoders/hgraph/scripts/: get_tensor.py  get_vocab.py  train_generator.py  train_generator_multi_gpu.py
forge_encode/server/: wrappers.py
forge_encode/utils/: __init__.py
forge_encode/vae/: __init__.py
scripts/: __init__.py  encode_molecules.py  generate_fingerprints.py
tests/: __init__.py  test_imports.py
